force-app/main/default/objects/SRQI_Care_Minutes_Target__c/SRQI_Care_Minutes_Target__c.object-meta.xml
<CustomObject>
    <description>Care Minutes Target</description>
    <label>Care Minutes Target</label>
    <nameField>
        <label>Care Minutes Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Care Minutes Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>