force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/Associated_Siebel_CMT_ID__c.field-meta.xml
<CustomField>
    <fullName>Associated_Siebel_CMT_ID__c</fullName>
    <description>Siebel record ID of the originating Care Minutes Target Data</description>
    <label>Associated Siebel CMT ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>