force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/Average_Care_Minutes_Target__c.field-meta.xml
<CustomField>
    <fullName>Average_Care_Minutes_Target__c</fullName>
    <label>Average Care Minutes Target</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>