force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/Average_Nusing_Care_Minutes_Target__c.field-meta.xml
<CustomField>
    <fullName>Average_Nusing_Care_Minutes_Target__c</fullName>
    <label>Average Nusing Care Minutes Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>