force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/AvgNurseAndPersonalCMPerResiPerDay__c.field-meta.xml
<CustomField>
    <fullName>AvgNurseAndPersonalCMPerResiPerDay__c</fullName>
    <label>AvgNurseAndPersonalCMPerResiPerDay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>