force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/AvgRegNurseAndPersCMComparisonWithTarget__c.field-meta.xml
<CustomField>
    <fullName>AvgRegNurseAndPersCMComparisonWithTarget__c</fullName>
    <formula>TargetAvgNurseAndPersonalCMPerResiPerDay__c  -  AvgNurseAndPersonalCMPerResiPerDay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AvgRegNurseAndPersCMComparisonWithTarget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>