force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/AvgRegNurseCMComparisonWithTarget__c.field-meta.xml
<CustomField>
    <fullName>AvgRegNurseCMComparisonWithTarget__c</fullName>
    <formula>TargetAvgRegNurseCMPerResiPerDay__c  -  AvgRegNurseCMPerResiPerDay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AvgRegNurseCMComparisonWithTarget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>