force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/AvgRegNurseCMComparisonWithTargetOutcome__c.field-meta.xml
<CustomField>
    <fullName>AvgRegNurseCMComparisonWithTargetOutcome__c</fullName>
    <label>AvgRegNurseCMComparisonWithTargetOutcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less</fullName>
            </value>
            <value>
                <fullName>More</fullName>
            </value>
            <value>
                <fullName>Same</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>