force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/AvgRegNurseCMPerResiPerDay__c.field-meta.xml
<CustomField>
    <fullName>AvgRegNurseCMPerResiPerDay__c</fullName>
    <label>AvgRegNurseCMPerResiPerDay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>