force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/Care_Minutes_Date__c.field-meta.xml
<CustomField>
    <fullName>Care_Minutes_Date__c</fullName>
    <label>Care Minutes Date</label>
    <type>Date</type>
</CustomField>