force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/Care_Minutes_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Care_Minutes_Period_Start__c</fullName>
    <label>Care Minutes Period Start</label>
    <type>Date</type>
</CustomField>