force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/Care_Minutes_Summary__c.field-meta.xml
<CustomField>
    <fullName>Care_Minutes_Summary__c</fullName>
    <description>Care Minutes Summary</description> 
    <label>Care Minutes Summary</label>
    <referenceTo>Care_Minutes_Summary__c</referenceTo>
    <relationshipLabel>Care Minutes Targets</relationshipLabel>
    <relationshipName>Care_Minutes_Targets_del</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>