force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/CMT_External_ID__c.field-meta.xml
<CustomField>
    <fullName>CMT_External_ID__c</fullName>
    <description>Oracle Service Id + siebel Id</description>
    <externalId>true</externalId>
    <label>CMT External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>