force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/Date_Time_of_extraction__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_extraction__c</fullName>
    <label>Date/Time of extraction</label>
    <type>DateTime</type>
</CustomField>