force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/Job_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Date__c</fullName>
    <label>Job Date</label>
    <type>Date</type>
</CustomField>