force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/Number_of_services_targets_extracted_for__c.field-meta.xml
<CustomField>
    <fullName>Number_of_services_targets_extracted_for__c</fullName>
    <label>Number of services targets extracted for</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>