force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/Period_targets_are_relevant_for__c.field-meta.xml
<CustomField>
    <fullName>Period_targets_are_relevant_for__c</fullName>
    <label>Period targets are relevant for</label>
    <length>255</length>
    <type>Text</type>
</CustomField>