force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/Quarter_Target_is_applicable_for__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Target_is_applicable_for__c</fullName>
    <formula>Care_Minutes_Summary__r.Reporting_Period__r.Reporting_Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter Target is applicable for</label>
    <type>Text</type>
</CustomField>