force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/Registered_Nurse_Care_Minutes_Target__c.field-meta.xml
<CustomField>
    <fullName>Registered_Nurse_Care_Minutes_Target__c</fullName>
    <label>Registered Nurse Care Minutes Target</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>