force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/RN_Average_Care_Minutes_Target__c.field-meta.xml
<CustomField>
    <fullName>RN_Average_Care_Minutes_Target__c</fullName>
    <description>Registered Nurse Average Care Minutes Target</description>
    <label>RN Average Care Minutes Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>