force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Care Minutes Targets</relationshipLabel>
    <relationshipName>Care_Minutes_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>