force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/Service_Account__c.field-meta.xml
<CustomField>
    <fullName>Service_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Account</label>
    <referenceTo>Service_Account_Relationship__c</referenceTo>
    <relationshipLabel>Care Minutes Targets</relationshipLabel>
    <relationshipName>Care_Minutes_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>