force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <formula>Service_Account__r.Service_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Name</label>
    <type>Text</type>
</CustomField>