force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/TargetAvgNurseAndPersonalCMPerResiPerDay__c.field-meta.xml
<CustomField>
    <fullName>TargetAvgNurseAndPersonalCMPerResiPerDay__c</fullName>
    <label>TargetAvgNurseAndPersonalCMPerResiPerDay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>