force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/TargetAvgRegNurseCMPerResiPerDay__c.field-meta.xml
<CustomField>
    <fullName>TargetAvgRegNurseCMPerResiPerDay__c</fullName>
    <label>TargetAvgRegNurseCMPerResiPerDay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>