force-app/main/default/objects/SRQI_Care_Minutes_Target__c/fields/Total_Nursing_Care_Minutes_Target__c.field-meta.xml
<CustomField>
    <fullName>Total_Nursing_Care_Minutes_Target__c</fullName>
    <label>Total Nursing Care Minutes Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>